fixed search z-index

--- a/client/src/components/Background/Background.css
+++ b/client/src/components/Background/Background.css
@@ -1,6 +1,5 @@
 #background-container {
-    padding-top: 150px;
     height: 100vh;
     width: 100vh;
-    z-index: 2;
+    z-index: 0;
 }
